# VideoSG

./: CMakeLists.txt
VideoSG/: CMakeLists.txt
app/: CMakeLists.txt
app/seg_tree_sample/: CMakeLists.txt  seg_tree.cpp
app/segment_viewer/: viewer.cpp
app/video_example/: video_example.cpp
segment_util/: CMakeLists.txt
